--- a/projects.yaml
+++ b/projects.yaml
@@ -617,17 +617,6 @@ projects:
     home_url: https://sentry.io/
     desc: Web service and frontend for cross-platform application monitoring, with a focus on error reporting.
     tags: ["dev", "flask", "corp"]
-  - name: Pagure
-    repo_url: https://pagure.io/pagure/
-    home_url: https://pagure.io/
-    desc: 'Git-centric software "forge" (code-hosting system).'
-    tags: ["scm"]
-  - name: Allura
-    repo_url: https://github.com/apache/allura
-    wp_url: https://en.wikipedia.org/wiki/Apache_Allura
-    home_url: https://allura.apache.org/
-    desc: Software forge, with support for git, hg, and svn.
-    tags: ["scm"]
   - name: Coala
     repo_url: https://github.com/coala/coala
     home_url: https://coala.io/
@@ -729,43 +718,67 @@ projects:
     tags: ["security"]
 
 ## Code management
+  - name: Pagure
+    repo_url: https://pagure.io/pagure/
+    home_url: https://pagure.io/
+    desc: 'Software "forge" (code-hosting system), focused on git.'
+    tags: ["scm"]
+  - name: Allura
+    repo_url: https://github.com/apache/allura
+    wp_url: https://en.wikipedia.org/wiki/Apache_Allura
+    home_url: https://allura.apache.org/
+    desc: Software forge, with support for git, hg, and svn.
+    tags: ["scm"]
   - name: Mercurial
     home_url: https://www.mercurial-scm.org/repo/hg/
     repo_url: https://www.mercurial-scm.org/repo/hg-stable
     wp_url: https://en.wikipedia.org/wiki/Mercurial
+    desc: Cross-platform distributed revision-control system designed for high performance and advanced branching/merging capabilities.
     tags: ["scm"]
   - name: Roundup
     wp_url: https://en.wikipedia.org/wiki/Roundup_(issue_tracker)
     repo_url: http://hg.code.sf.net/p/roundup/code
+    desc: Highly-customizable issue tracking system featuring command-line, web, and email interfaces, used by the official Python bug tracker at [bugs.python.org](https://bugs.python.org).
     tags: ["scm"]
   - name: GNU Bazaar
     repo_url: https://code.launchpad.net/bzr
     wp_url: https://en.wikipedia.org/wiki/GNU_Bazaar
+    desc: Distributed and client–server revision control system.
     tags: ["scm"]
   - name: Trac
     repo_url: https://github.com/edgewall/trac
     wp_url: https://en.wikipedia.org/wiki/Trac
+    desc: Enhanced web-based wiki and issue tracking system for software development projects.
     tags: ["scm"]
   - name: ViewVC
     repo_url: https://github.com/viewvc/viewvc/
+    desc: Browser interface for CVS and Subversion version control repositories.
     tags: ["scm"]
   - name: Kallithea
     repo_url: https://kallithea-scm.org/repos/kallithea
+    wp_url: https://en.wikipedia.org/wiki/Kallithea_(software)
+    desc: Software forge for Mercurial and Git with a built-in push/pull server, full text search, and code-review. Forked from RhodeCode in 2014.
     tags: ["scm"]
   - name: RhodeCode
     home_url: https://code.rhodecode.com/rhodecode-enterprise-ce
     wp_url: https://en.wikipedia.org/wiki/RhodeCode
-    tags: ["scm"]
+    desc: Self-hosted platform for behind-the-firewall source code management, providing centralized control over Git, Mercurial, and Subversion.
+    tags: ["scm", "corp"]
   - name: Rietveld
     repo_url: https://github.com/rietveld-codereview/rietveld
+    home_url: https://codereview.appspot.com/
+    wp_url: https://en.wikipedia.org/wiki/Rietveld_(software)
+    desc: Django-based collaborative code review tool for Subversion written by [Guido van Rossum](https://en.wikipedia.org/wiki/Guido_van_Rossum) to run on [Google AppEngine](https://en.wikipedia.org/wiki/Google_App_Engine). The basis for [Gerrit](https://en.wikipedia.org/wiki/Gerrit_(software)).
     tags: ["scm"]
   - name: Patchwork
     repo_url: https://github.com/getpatchwork/patchwork
     home_url: http://jk.ozlabs.org/projects/patchwork/
+    desc: Web-based patch tracking system designed to facilitate code contribution to an open-source project. Designed and used for Linux kernel subsystem development.
     tags: ["scm"]
   - name: TortoiseHg
     repo_url: https://bitbucket.org/tortoisehg/thg/wiki/developers/Home
     home_url: https://tortoisehg.bitbucket.io/
+    desc: Windows shell extension and a series of applications for the Mercurial distributed revision control system. Also includes GNOME and CLI support.
     tags: ["scm"]
 
 ## Package management
