--- a/projects.yaml
+++ b/projects.yaml
@@ -13,7 +13,9 @@ tagsonomy:
   framework: # (?)
       - desktop:
           - gtk
-          - qt
+          - qt:
+            - qt4
+            - qt5
           - wx
           - pygame
           - other
@@ -22,10 +24,15 @@ tagsonomy:
           - django
           - twisted
           - gevent
+          - plone
           - other
       - nui:  # ?
           - beeware   # not actually used here atm
           - kivy
+      - hybrid:
+          - c
+          - cpp
+          - js
   platform:
       - desktop:
         - windows
@@ -100,67 +107,68 @@ projects:
     repo_url: https://github.com/metabrainz/picard
     wp_url: https://en.wikipedia.org/wiki/MusicBrainz_Picard
     desc: Automatically identify, tag, and organize music albums and other digital audio recordings.
-    tags: ["audio"]
+    tags: ["audio", "qt"]
   - name: Exaile
     repo_url: https://github.com/exaile/exaile
     wp_url: https://en.wikipedia.org/wiki/Exaile
-    tags: ["audio"]
+    tags: ["audio", "gtk"]
     desc: Cross-platform audio player, tag editor, and library organizer.
   - name: Quod Libet
     repo_url: https://github.com/quodlibet/quodlibet
     wp_url: https://en.wikipedia.org/wiki/Quod_Libet_(software)
-    tags: ["audio"]
+    tags: ["audio", "gtk"]
     desc: Cross-platform audio player, tag editor, and library organizer.
   - name: Frescobaldi
     repo_url: https://github.com/wbsoft/frescobaldi
     wp_url: https://en.wikipedia.org/wiki/Frescobaldi_(software)
-    tags: ["audio"]
+    tags: ["audio", "qt"]
     desc: An editor for [LilyPond](https://en.wikipedia.org/wiki/LilyPond) music files.
   - name: SoundConverter
     desc: A GNOME-based audio file transcoder.
     repo_url: https://github.com/kassoulet/soundconverter
     wp_url: https://en.wikipedia.org/wiki/GNOME_SoundConverter
-    tags: ["audio"]
+    tags: ["audio", "gtk"]
   - name: PuddleTag
     repo_url: https://github.com/keithgg/puddletag/
     wp_url: https://en.wikipedia.org/wiki/Puddletag
-    tags: ["audio"]
+    tags: ["audio", "qt4"]
     desc: An audio tag (metadata) editor for audio file formats.
   - name: GNU Radio
     repo_url: https://github.com/gnuradio/gnuradio  # hybrid-cpp
     wp_url: https://en.wikipedia.org/wiki/GNU_Radio
-    tags: ["audio"]
+    tags: ["audio", "qt"]
     desc: Software development toolkit that provides signal processing blocks to implement software-defined radios and signal-processing systems.
   - name: GNU Solfege
     repo_url: http://git.savannah.gnu.org/cgit/solfege.git
     wp_url: https://en.wikipedia.org/wiki/GNU_Solfege  # ear training, non-github
-    tags: ["audio"]
+    tags: ["audio", "gtk"]
     desc: An ear-training program intended to help musicians improve their skills.
   - name: Friture
     home_url: http://friture.org/
     repo_url: https://github.com/tlecomte/friture
     desc: Visualizes and analyzes live audio data in real-time, including scope, spectrum analyzer, rolling 2D spectrogram, and more.
+    tags: ["audio", "qt5"]
 
 ## Video
   - name: Pitivi
     repo_url: https://gitlab.gnome.org/GNOME/pitivi
     wp_url: https://en.wikipedia.org/wiki/Pitivi
-    tags: ["video"]
+    tags: ["video", "gtk"]
     desc: Non-linear video editor for Linux, based on GStreamer.
   - name: Plumi
     repo_url: https://github.com/plumi/plumi.app
     wp_url: https://en.wikipedia.org/wiki/Plumi
-    tags: ["video"]
     desc: Video sharing content management system based on [Plone](https://en.wikipedia.org/wiki/Plone_(software)).
+    tags: ["video", "cms", "plone"]
   - name: Flowblade
     repo_url: https://github.com/jliljebl/flowblade
     wp_url: https://en.wikipedia.org/wiki/Flowblade
-    tags: ["video"]
+    tags: ["video", "gtk"]
     desc: Multitrack, non-linear video editing software for Linux.
   - name: OpenShot
     repo_url: https://github.com/OpenShot/openshot-qt
     wp_url: https://en.wikipedia.org/wiki/OpenShot
-    tags: ["video"]
+    tags: ["video", "qt5"]
     desc: A cross-platform video editor for FreeBSD, Linux, macOS, and Windows.
 
 ## Graphics
@@ -168,33 +176,34 @@ projects:
   - name: FreeCAD
     repo_url: https://github.com/FreeCAD/FreeCAD
     wp_url: https://en.wikipedia.org/wiki/FreeCAD
-    tags: ["graphics"]
+    tags: ["graphics", "qt", "cpp"]
     desc: General-purpose parametric 3D CAD modeler and a building information modeling (BIM) software with finite-element-method (FEM) support.
   - name: MakeHuman
     wp_url: https://en.wikipedia.org/wiki/MakeHuman
     repo_url: https://bitbucket.org/MakeHuman/makehuman
-    tags: ["graphics"]
+    tags: ["graphics", "qt"]
     desc: 3D computer graphics software designed for the prototyping of photo realistic humanoids.
   - name: MyPaint
     repo_url: https://github.com/mypaint/mypaint
+    home_url: http://mypaint.org/
     wp_url: https://en.wikipedia.org/wiki/MyPaint
-    tags: ["graphics"]
+    tags: ["graphics", "gtk"]
     desc: Raster graphics editor for digital painters with a focus on painting rather than image manipulation.
   - name: SK1
     repo_url: https://github.com/sk1project/sk1-wx
     wp_url: https://en.wikipedia.org/wiki/SK1_(program)
     home_url: https://sk1project.net/  #  (forked from skencil)
-    tags: ["graphics"]
+    tags: ["graphics", "gtk", "wx"]
     desc: Feature-rich, cross-platform illustration program.
   - name: OCRFeeder
     repo_url: https://gitlab.gnome.org/GNOME/ocrfeeder
     wp_url: https://en.wikipedia.org/wiki/OCRFeeder
-    tags: ["graphics"]
+    tags: ["graphics", "gtk"]
     desc: An optical character recognition suite for GNOME, with support for command-line OCR engines like CuneiForm, GOCR, Ocrad and Tesseract.
   - name: OCRopus
     repo_url: https://github.com/tmbdev/ocropy
     wp_url: https://en.wikipedia.org/wiki/OCRopus
-    tags: ["graphics"]
+    tags: ["graphics", "console"]
     desc: Document analysis and optical character recognition (OCR) system.
 
 ## Games
